test/parser/valid/_custom/interface_with_methods.java
public interface InterfaceWithMethods {
    public void m();
    private int d();
}
