test/parser/bad/_custom/abstract_empty_body.java
public class AbstractEmptyBody {
    public AbstractEmptyBody() {}

    public abstract void m() {}
}
